Fix z-index for toolbar in CardHostDetailView

--- a/src/styles/css-variables/_z-index.scss
+++ b/src/styles/css-variables/_z-index.scss
@@ -6,6 +6,7 @@
 	--z-dropdown: 30;
 	--z-sticky: 40;
 	--z-topbar: 50;
+	--z-toolbar: 50;
 	--z-skip-link: 60;
 	--z-floating-menu: 70;
 	--z-alert: 80;
